# umd-mockup

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .python-version  Makefile  Start.py  code_info.txt  pyproject.toml  pyrightconfig.json  readme.md  requirements.txt
.github/actions/lint-test-python/: action.yaml
.github/workflows/: on-pr-dev.yaml
pages/: 1_1 - Sloop en transformatie.py  2_2 - Nieuwbouw.py  3_3 - Bekijk project.py  4_4 - Resultaten.py  5_5 - Update gebouwprofielen.py  5_5 - Update profielen.py  6_6 - MOCKUP - Ingroeipad.py
resources/templates/: report.html  styles.css
scenarios/: Scenario collection 1.pickle  Scenario collection B.pickle  scenario_data.pickle
spatial_data/final/: bag-ams-zuidoost-platdak-buurt.shp  bag-ams-zuidoost-platdak-buurt.shx
tests/utils/: test_caclculations.py  test_utils.py
utils/: AIreport.py  ai_report.py  buildingdata.py  calculations.py  column_configs.py  data_manager.py  display_helpers.py  layout.py  paths.py  reportgen.py  reportgenerator.py  utils.py
